--- a/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
@@ -8,8 +8,12 @@
         Title="DbConfigureWindow" Height="300" Width="300">
     <DockPanel>
         <Menu DockPanel.Dock="Top">
-            <MenuItem Header="数据库初始化"></MenuItem>
+            <MenuItem Header="MSSql数据库初始化" Name="MenuInitMSSql" Click="MenuInitMSSql_Click"></MenuItem>
+            <MenuItem Header="Sqlite数据库初始化" Name="MenuInitSqlite" Click="MenuInitSqlite_Click"></MenuItem>
         </Menu>
-        <TextBox Name="TbConsole"></TextBox>
+        <ScrollViewer VerticalScrollBarVisibility="Auto" >
+            <TextBox Name="TbConsole" TextWrapping="Wrap"></TextBox>
+        </ScrollViewer>
+        
     </DockPanel>
 </Window>
