--- a/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
@@ -5,11 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocationServer.Windows"
         mc:Ignorable="d"
-        Title="DbConfigureWindow" Height="300" Width="300">
+        Title="DbConfigureWindow" Height="400" Width="600">
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="MSSql数据库初始化" Name="MenuInitMSSql" Click="MenuInitMSSql_Click"></MenuItem>
             <MenuItem Header="Sqlite数据库初始化" Name="MenuInitSqlite" Click="MenuInitSqlite_Click"></MenuItem>
+            <MenuItem Header="初始化区域" Name="MenuInitTopo" Click="MenuInitTopo_Click"></MenuItem>
+            <MenuItem Header="整理初始化设备" Name="MenuRemoveArchor" Click="MenuRemoveArchor_Click"></MenuItem>
+            <MenuItem Header="导入初始化设备" Name="MenuImportDevs" Click='MenuImportDevs_Click'></MenuItem>
         </Menu>
         <ScrollViewer VerticalScrollBarVisibility="Auto" >
             <TextBox Name="TbConsole" TextWrapping="Wrap"></TextBox>
