--- a/Server/WCFServer/LocationWCF/Windows/RoomArchorSettingWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/RoomArchorSettingWindow.xaml
@@ -1,15 +1,18 @@
-﻿<Window xmlns:WPFClientControlLib="clr-namespace:WPFClientControlLib;assembly=WPFClientControlLib"  x:Class="LocationServer.Windows.RoomArchorSettingWindow"
+﻿<Window  x:Class="LocationServer.Windows.RoomArchorSettingWindow"
+        xmlns:WPFClientControlLib="clr-namespace:WPFClientControlLib;assembly=WPFClientControlLib" 
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocationServer.Windows"
         mc:Ignorable="d"
-        Title="机房基站设置" Height="350" Width="300" Topmost="True">
+        Title="机房基站设置" Height="350" Width="350" Topmost="True">
     <Grid>
         <StackPanel>
             <Menu>
                 <MenuItem Header="详情" Name="MenuDetail" Click="MenuDetail_Click" Loaded="MenuDetail_Loaded"></MenuItem>
+                <MenuItem Header="基站信息" Name="MenuArchorInfo" Click="MenuArchorInfo_OnClick"></MenuItem>
+                <MenuItem Header="基站列表" Name="MenuArchorList" Click="MenuArchorList_OnClick"></MenuItem>
             </Menu>
             <DockPanel>
                 <Label Width="50" DockPanel.Dock="Left">Id</Label>
@@ -22,19 +25,36 @@
                 <TextBox Name="TbCode"></TextBox>
             </DockPanel>
             <DockPanel>
-                <Label Width="100" DockPanel.Dock="Left">高度</Label>
-                <TextBox Name="TbHeight" ></TextBox>
-            </DockPanel>
-            <DockPanel>
                 <Label Width="100" DockPanel.Dock="Left">建筑</Label>
                 <TextBox Name="TbBuildingName" IsEnabled="False"></TextBox>
             </DockPanel>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Label Width="100" DockPanel.Dock="Left" Grid.Column="0">楼层名称</Label>
+                <TextBox Name="TbFloorName" IsEnabled="False" Grid.Column="1"></TextBox>
+                <Label Width="100" DockPanel.Dock="Left" Grid.Column="2">楼层高度</Label>
+                <TextBox Name="TbFloorHeight"  IsEnabled="False" Grid.Column="3"></TextBox>
+            </Grid>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Label Width="100" DockPanel.Dock="Left" Grid.Column="0">相对高度</Label>
+                <TextBox Name="TbHeight"  Grid.Column="1" TextChanged="TbHeight_OnTextChanged"></TextBox>
+                <Label Width="100" DockPanel.Dock="Left" Grid.Column="2">绝对高度</Label>
+                <TextBox Name="TbHeight2"  Grid.Column="3"></TextBox>
+            </Grid>
+
             <DockPanel>
-                <Label Width="100" DockPanel.Dock="Left">楼层</Label>
-                <TextBox Name="TbFloorName" IsEnabled="False"></TextBox>
-            </DockPanel>
-            <DockPanel>
-                <Label Width="100" DockPanel.Dock="Left">(相对楼层)坐标 *</Label>
+                <Label Width="100" DockPanel.Dock="Left">(相对楼层)坐标</Label>
                 <WPFClientControlLib:PointControl x:Name="PcArchor" />
             </DockPanel>
             <DockPanel>
@@ -43,20 +63,22 @@
             </DockPanel>
 
             <DockPanel>
-                <Label Width="100" DockPanel.Dock="Left">机房参考点坐标*</Label>
-                <WPFClientControlLib:PointControl x:Name="PcZero" IsEnabled="False"/>
+                <Label Width="100" DockPanel.Dock="Left">机房参考点坐标</Label>
+                <Button DockPanel.Dock="Right" Name="BtnShowPoint" Click="BtnShowPoint_OnClick">显示</Button>
+                <WPFClientControlLib:PointControl x:Name="PcZero"/>
+                
             </DockPanel>
             <DockPanel>
-                <Label Width="100" DockPanel.Dock="Left">相对参考点坐标 *</Label>
+                <Label Width="100" DockPanel.Dock="Left">相对参考点坐标</Label>
                 <WPFClientControlLib:PointControl x:Name="PcRelative"/>
             </DockPanel>
             <DockPanel>
-                <Label Width="100" DockPanel.Dock="Left">绝对坐标(CAD)</Label>
+                <Label Width="100" DockPanel.Dock="Left">绝对坐标(CAD)*</Label>
                 <WPFClientControlLib:PointControl x:Name="PcAbsolute"/>
             </DockPanel>
             <StackPanel>
                 <Button Name="BtnSave" Click="BtnSave_Click">保存</Button>
-                <Button Name="BtnRefresh" Click="BtnRefresh_Click">刷新视图</Button>
+                <!--<Button Name="BtnRefresh" Click="BtnRefresh_Click">刷新视图</Button>-->
             </StackPanel>
         </StackPanel>
     </Grid>
