--- a/Server/WCFServer/LocationWCF/Windows/AreaCanvasWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/AreaCanvasWindow.xaml
@@ -12,14 +12,14 @@
 
         </StackPanel>
         <wpfClientControlLib:TopoTreeView x:Name="TopoTreeView1" Width="200" DockPanel.Dock="Left"/>
-        <TabControl DockPanel.Dock="Top" Height="300">
+        <TabControl Name="TabControl1" DockPanel.Dock="Top" Height="300" SelectionChanged="TabControl1_OnSelectionChanged">
             <TabItem Header="子区域列表">
                 <wpfClientControlLib:AreaListBox x:Name="AreaListBox1" SelectedItemChanged="AreaListBox1_SelectedItemChanged"/>
             </TabItem>
             <TabItem Header="设备列表">
                 <wpfClientControlLib:DbDeviceListBox x:Name="DeviceListBox1" SelectedItemChanged="DeviceListBox1_SelectedItemChanged"/>
             </TabItem>
-            <TabItem Header="基站设置列表">
+            <TabItem Header="基站设置列表" >
                 <Controls:ArchorListExportControl x:Name="ArchorListExportControl1"/>
             </TabItem>
         </TabControl>
