--- a/Server/WCFServer/LocationWCF/MainWindow.xaml
+++ b/Server/WCFServer/LocationWCF/MainWindow.xaml
@@ -1,15 +1,16 @@
-﻿<Window xmlns:LocationServer="clr-namespace:LocationServer"  xmlns:WPFClientControlLib="clr-namespace:WPFClientControlLib;assembly=WPFClientControlLib"  x:Class="LocationWCFServer.MainWindow"
+﻿<Window xmlns:Controls="clr-namespace:LocationServer.Controls"  xmlns:LocationServer="clr-namespace:LocationServer"  xmlns:WPFClientControlLib="clr-namespace:WPFClientControlLib;assembly=WPFClientControlLib"  x:Class="LocationWCFServer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LocationWCFServer"
         mc:Ignorable="d"
-        Title="服务端" Height="500" Width="1000" Loaded="MainWindow_OnLoaded"  WindowStartupLocation="CenterScreen">
+        Title="服务端" Height="300" Width="600" Loaded="MainWindow_OnLoaded"  WindowStartupLocation="CenterScreen">
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="窗口">
                 <MenuItem Header="定位引擎客户端" Name="MenuEngineClient" Click="MenuEngineClient_OnClick"></MenuItem>
+                <MenuItem Header="打开三维程序" Name="MenuOpen3D" Click="MenuOpen3D_OnClick"></MenuItem>
             </MenuItem>
             <MenuItem Header="工具">
                 <MenuItem Header="区域范围显示" Name="MenuAreaCanvas" Click="MenuAreaCanvas_OnClick"></MenuItem>
@@ -25,34 +26,16 @@
                 <MenuItem Header="事件发送测试" Name="MenuEventSendTest" Click="MenuEventSendTest_OnClick"></MenuItem>
             </MenuItem>
         </Menu>
+        <!--<Button DockPanel.Dock="Top" Name="BtnOpenSimulator" Content="打开定位模拟器" Click="BtnOpenSimulator_OnClick"></Button>
+        <Button DockPanel.Dock="Top" Name="BtnConnectEngine" Content="连接定位引擎" Click="BtnConnectEngine_Click"></Button>-->
         <TabControl>
-            <TabItem Header="服务" Height="21" VerticalAlignment="Top">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"></RowDefinition>
-                        <RowDefinition></RowDefinition>
-                    </Grid.RowDefinitions>
-                    <StackPanel Margin="1">
-                        <StackPanel Orientation="Horizontal" Margin="2">
-                            <Label>Host:</Label>
-                            <TextBox Width="200" Name="TbHost" VerticalContentAlignment="Center">localhost</TextBox>
-                            <Label>Port:</Label>
-                            <TextBox Width="50" Name="TbPort" VerticalContentAlignment="Center">8733</TextBox>
-                            <Button Name="BtnStartService" Click="BtnStartService_Click" Content="启动服务" Margin="2"></Button>
-                        </StackPanel>
-
-                        <TextBox Name="TbResult1" Grid.Row="1" Height="100"></TextBox>
-                        <Button Name="BtnOpenSimulator" Content="打开定位模拟器" Click="BtnOpenSimulator_OnClick"></Button>
-                        <Button Name="BtnConnectEngine" Content="连接定位引擎" Click="BtnConnectEngine_Click"></Button>
-                        <Button Name="BtnOpenU3D" Content="打开三维定位程序" Click="BtnOpenU3D_OnClick"></Button>
-
-                    </StackPanel>
-                    
-                </Grid>
+            <TabItem Header="服务">
+                <Controls:ServerManagerBox x:Name="ServerManagerBox1"/>
             </TabItem>
-            <TabItem Header="定位" Height="21" VerticalAlignment="Top" Visibility="Visible">
+            <!--<TabItem Header="定位" Height="21" VerticalAlignment="Top" Visibility="Visible">
                 <LocationServer:LocationTestBox x:Name="LocationTestBox1"/>
-            </TabItem>
+            </TabItem>-->
         </TabControl>
+
     </DockPanel>
 </Window>
