--- a/Server/WebSite/LocationWeb/Views/AreaAuthorization/Edit.cshtml
+++ b/Server/WebSite/LocationWeb/Views/AreaAuthorization/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model DbModel.Location.Work.JurisDiction
+﻿@model DbModel.Location.Work.AreaAuthorization
 
 @{
     ViewBag.Title = "Edit";
@@ -63,10 +63,10 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.nTimeLength, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.TimeSpan, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.nTimeLength, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.nTimeLength, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.TimeSpan, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.TimeSpan, "", new { @class = "text-danger" })
                 </div>
             </div>
 
