--- a/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
@@ -8,11 +8,19 @@
         Title="DbConfigureWindow" Height="400" Width="600">
     <DockPanel>
         <Menu DockPanel.Dock="Top">
-            <MenuItem Header="MSSql数据库初始化" Name="MenuInitMSSql" Click="MenuInitMSSql_Click"></MenuItem>
-            <MenuItem Header="Sqlite数据库初始化" Name="MenuInitSqlite" Click="MenuInitSqlite_Click"></MenuItem>
-            <MenuItem Header="初始化区域" Name="MenuInitTopo" Click="MenuInitTopo_Click"></MenuItem>
-            <MenuItem Header="整理初始化设备" Name="MenuRemoveArchor" Click="MenuRemoveArchor_Click"></MenuItem>
-            <MenuItem Header="导入初始化设备" Name="MenuImportDevs" Click='MenuImportDevs_Click'></MenuItem>
+            <MenuItem Header="数据初始化">
+                <MenuItem Header="MSSql" Name="MenuInitMSSql" Click="MenuInitMSSql_Click"></MenuItem>
+                <MenuItem Header="Sqlite" Name="MenuInitSqlite" Click="MenuInitSqlite_Click"></MenuItem>
+            </MenuItem>
+            <MenuItem Header="数据初始化">
+                <MenuItem Header="区域" Name="MenuInitTopo" Click="MenuInitTopo_Click"></MenuItem>
+                <MenuItem Header="区域权限" Name="MenuInitAA" Click="MenuInitAA_OnClick"></MenuItem>
+            </MenuItem>
+            <MenuItem Header="工具">
+                <MenuItem Header="整理初始化设备" Name="MenuRemoveArchor" Click="MenuRemoveArchor_Click"></MenuItem>
+                <MenuItem Header="导入初始化设备" Name="MenuImportDevs" Click='MenuImportDevs_Click'></MenuItem>
+
+            </MenuItem>
         </Menu>
         <ScrollViewer VerticalScrollBarVisibility="Auto" >
             <TextBox Name="TbConsole" TextWrapping="Wrap"></TextBox>
