界面接口（区域统计、附近人员、附近设备）

--- a/Client/WPFWCFClient/LocationWCF/Windows/ClientWindow.xaml
+++ b/Client/WPFWCFClient/LocationWCF/Windows/ClientWindow.xaml
@@ -56,6 +56,8 @@
                     <Button Name="BtnGetAreaStatistics" Click="BtnGetAreaStatistics_OnClick">获取园区统计信息</Button>
                     <Button Name="GetNearbyPerson_Currency" Click="GetNearbyPerson_Currency_OnClick">获取附近人员（通用）</Button>
                     <Button Name="GetNearbyPerson_Alarm" Click="GetNearbyPerson_Alarm_OnClick">获取附近人员（告警）</Button>
+                    <Button Name="GetNearbyDev_Currency" Click="GetNearbyDev_Currency_OnClick">获取附近设备（通用）</Button>
+                    <Button Name="GetNearbyCamera_Alarm" Click="GetNearbyCamera_Alarm_OnClick">获取附近摄像头（告警）</Button>
                 </StackPanel>
             </TabItem>
         </TabControl>
