--- a/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
@@ -8,8 +8,8 @@
         Title="DbConfigureWindow" Height="400" Width="600">
     <DockPanel>
         <Menu DockPanel.Dock="Top">
-            <MenuItem Header="数据初始化">
-                <MenuItem Header="MSSql" Name="MenuInitMSSql" Click="MenuInitMSSql_Click"></MenuItem>
+            <MenuItem Header="数据库初始化">
+                <MenuItem Header="SqlServer" Name="MenuInitMSSql" Click="MenuInitMSSql_Click"></MenuItem>
                 <MenuItem Header="Sqlite" Name="MenuInitSqlite" Click="MenuInitSqlite_Click"></MenuItem>
             </MenuItem>
             <MenuItem Header="数据初始化">
